# RezBuildScripts

./: .gitmodules  build_packages.sh  docker_build
PyOpenGL/3.0.2/: CMakeLists.txt  package.py
PySide/1.2.4/: CMakeLists.txt  package.py
PySideTools/0.2.15/: CMakeLists.txt  package.py
_docker/: build_script.sh  dockerfile
alembic/1.5.8/: CMakeLists.txt  package.py
app_maya/2017.0.0/: package.py  rezbuild.py
app_maya/2018.0.0/: package.py  rezbuild.py
avrlibc/2.0.0/: CMakeLists.txt  package.py
binutils/2.25/: CMakeLists.txt
blender/2.78c/: CMakeLists.txt  package.py
boost/1.55.0/: CMakeLists.txt  package.py
boost/1.61.0/: docker.CMakeLists.txt  package.py  rezbuild.py
boost/1.63.0/: CMakeLists.txt  package.py
boost/1.66.0/: CMakeLists.txt  package.py  rezbuild.py
catch/1.8.2/: CMakeLists.txt  package.py
ccache/3.3.3/: CMakeLists.txt  package.py
cmake/3.7.2/: CMakeLists.txt  package.py
double_conversion/1.1.5/: CMakeLists.txt  docker.CMakeLists.txt  package.py  rezbuild.py
glew/1.10.0/: CMakeLists.txt  package.py
glew/2.0.0/: package.py
glfw/3.2.1/: CMakeLists.txt  package.py
googletest/1.8.0/: CMakeLists.txt  package.py
gsl/2.3/: CMakeLists.txt  package.py
hdf5/1.8.9/: CMakeLists.txt  package.py
ilmbase/2.2.0/: CMakeLists.txt  package.py
mongoc/1.6.3/: CMakeLists.txt  package.py
mongocxx/3.1.2/: CMakeLists.txt  package.py
ninja/1.7.2/: CMakeLists.txt  docker.CMakeLists.txt  package.py  rezbuild.py
node/6.10.3/: CMakeLists.txt  package.py
oiio/1.5.24/: CMakeLists.txt  package.py
oiio/1.7.11/: CMakeLists.txt  package.py
openexr/2.2.0/: CMakeLists.txt  docker.CMakeLists.txt  package.py  rezbuild.py
opensubdiv/3.0.5/: CMakeLists.txt  package.py
pip/7.1.2/: package.py
pip/8.1.2/: package.py
ptex/2.0.30/: CMakeLists.txt  package.py
python/2.7.12/: package.py
python/2.7.15/: CMakeLists.txt  docker.CMakeLists.txt  package.py  rezbuild.py
python/3.6.0/: package.py
qt/4.8.6/: CMakeLists.txt  package.py
qt/5.6.3/: CMakeLists.txt  docker.CMakeLists.txt  package.py  rezbuild.py
qt/5.8.0/: CMakeLists.txt  package.py
rez_docker/0.0.0/: CMakeLists.txt  package.py
rez_docker/0.0.0/docker/: build_script.sh  dockerfile
rez_docker/0.0.0/python/: rez_docker.py
sdl/2.0.5/: CMakeLists.txt  package.py
setuptools/27.3.0/: package.py
shiboken/1.2.4/: CMakeLists.txt  package.py
tbb/4.3.6/: CMakeLists.txt  package.py
usd/0.8.1/rez_base_pkg/: CMakeLists.txt  package.py
usd/0.8.1/rez_maya_pkg/: CMakeLists.txt  package.py
usd/rez_base_pkg/: CMakeLists.txt  package.py
usd/rez_maya_pkg/: CMakeLists.txt  package.py
vfx_platform/2018/: package.py
vfx_platform/2018/docker/: build_script.sh  dockerfile
vfx_platform_bundle/2018/: CMakeLists.txt  package.py
vfx_reference_platform/2018/: package.py
(+1 files in other folders)
